--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -4,3 +4,25 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+.button1 {
+    background-color: #8658d6 /* Purple */;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.button2 {
+    color: black /* black */;
+    text-align: center;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+}
