Amended the index,Html and css
Created space between the changes tag and the buttons, also made the padding of the cancel button same with the payment button

--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -20,8 +20,8 @@
 }
 
 .button2 {
-    color: black /* black */;
-    text-align: center;
+    color: black; /* black */;
+    padding: 16px 32px;
     transition-duration: 0.4s;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
