--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -3,19 +3,26 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    border-style: solid;
+    border-radius: 10px;
+    border-color:#cbe0f3;
+    background-color: #ffffff;
 }
 
 .button1 {
     background-color: #8658d6 /* Purple */;
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 8px 60px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     transition-duration: 0.4s;
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 100px;
+    border-radius: 5px;
+
 
 }
 
@@ -26,6 +33,33 @@
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
 }
-img.rounded-corners {
-    border-radius: 30px;
-  }
+
+.title{
+    text-align: center;
+}
+.order-sub{
+    max-width: 300px;
+    text-align: center;
+    margin-left: 70px;
+    
+}
+.plan{
+    margin-left: 60px;
+    margin-top: -65px;
+    line-height: 1px;
+}
+
+.change{
+    float: right;
+    margin-top: -40px;
+    padding-right: 60px;
+}
+
+.music-icon-left{
+    padding-left: 60px;
+}
+
+.order{
+    text-align: center;
+}
+
