--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,3 +1,27 @@
+@media screen and (max-width: 500px) {
+    .column {
+      width: 100%;
+    }
+  }
+
+  img.rounded-corners {
+    
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+  
+    }
+
+    #containerIntro img,
+    #containerIntro h5,
+    #containerIntro a,
+    #containerIntro p {
+  display: inline;
+  vertical-align: top;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+}
+
 .container {
     position: absolute;
     left: 50%;
@@ -22,10 +46,11 @@
 .button2 {
     color: black; /* black */;
     padding: 16px 32px;
+    text-align: center;
     transition-duration: 0.4s;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
 }
-img.rounded-corners {
-    border-radius: 30px;
-  }
+.p {
+    color: white;
+}
