--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -5,12 +5,13 @@
     transform: translate(-50%, -50%);
     border-style: solid;
     border-radius: 10px;
-    border-color:#cbe0f3;
+    border-color: #cbe0f3;
     background-color: #ffffff;
 }
 
 .button1 {
-    background-color: #8658d6 /* Purple */;
+    background-color: rgb(56, 42, 225)/* Purple */
+    ;
     border: none;
     color: white;
     padding: 8px 60px;
@@ -22,44 +23,44 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: 100px;
     border-radius: 5px;
-
-
 }
 
 .button2 {
-    color: black; /* black */;
+    color: black;
+    /* black */
+    ;
     padding: 16px 32px;
     transition-duration: 0.4s;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.title{
+.title {
     text-align: center;
 }
-.order-sub{
+
+.order-sub {
     max-width: 300px;
     text-align: center;
     margin-left: 70px;
-    
 }
-.plan{
+
+.plan {
     margin-left: 60px;
     margin-top: -65px;
     line-height: 1px;
 }
 
-.change{
+.change {
     float: right;
     margin-top: -40px;
     padding-right: 60px;
 }
 
-.music-icon-left{
+.music-icon-left {
     padding-left: 60px;
 }
 
-.order{
+.order {
     text-align: center;
 }
-
